      - InnoDB Row Operations: Innodb_rows_read/inserted/updated/deleted
      - InnoDB Locking: Innodb_row_lock_* (waits, time, current)
      - InnoDB I/O: Innodb_data_*, Innodb_os_log_*, Innodb_log_*
      - InnoDB Transactions: Innodb_history_list_length, purge_trx_id
      - InnoDB Pages: Innodb_pages_*, Innodb_dblwr_*
      - Table & Handler: Handler_read_*, Handler_write/update/delete, Open_*, Table_locks_*
      - Temp Tables: Created_tmp_disk_tables, Created_tmp_tables
      - Network: Bytes_sent, Bytes_received
      - Binary Log: Binlog_cache_*, Binlog_stmt_cache_*
      - Keys (MyISAM): Key_blocks_*, Key_read*, Key_write*
      - Query Cache: Qcache_* (deprecated in MySQL 8.0)
      - Performance Schema: Performance_schema_*_lost
      - Server: Uptime, Uptime_since_flush_status
    • Config Variables (~75 variables documented):
      - InnoDB Buffer Pool: innodb_buffer_pool_size/instances/chunk_size
      - InnoDB Redo Log: innodb_log_file_size, innodb_flush_log_at_trx_commit
      - InnoDB I/O: innodb_read_io_threads, innodb_write_io_threads, innodb_io_capacity
      - InnoDB Transactions: innodb_lock_wait_timeout, innodb_deadlock_detect
      - InnoDB Change Buffer: innodb_change_buffering, innodb_change_buffer_max_size
      - InnoDB Adaptive Hash: innodb_adaptive_hash_index
      - Connections: max_connections, thread_cache_size, wait_timeout
      - Query Execution: tmp_table_size, max_heap_table_size, sort_buffer_size
      - Table Cache: table_open_cache, table_definition_cache, open_files_limit
      - Binary Logging: binlog_format, sync_binlog, binlog_group_commit_*
      - Replication: slave_parallel_workers, replica_preserve_commit_order, gtid_mode
      - Performance Schema: performance_schema settings
      - Logging: slow_query_log, long_query_time, log_queries_not_using_indexes
    • Tooltips appear on hover over info icon (ℹ️) next to variable name
    • Descriptions explain: purpose, recommended values, impact of changes
