@@ -75,7 +75,7 @@
                             </div>
                         </td>
                         <td class="px-6 py-4 text-sm text-midnight-300">
-                            {{ item.job.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                            <span data-utc="{{ item.job.created_at.strftime('%Y-%m-%dT%H:%M:%S') }}">{{ item.job.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</span>
                         </td>
                         <td class="px-6 py-4">
                             {% if item.job.status.value == 'pending' %}
